[project]
name = "strata-fit-v6-imputation-py"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.35.2",
    "pydantic>=2,<3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "v6-federated-algo-core-py @ https://github.com/mdw-nl/v6-federated-algo-core-v6/archive/refs/heads/main.tar.gz",
    "vantage6>=4.13.1",
    "vantage6-algorithm-tools>=4.13.1",
]
